# RealTimeEdgeViewer

./: README.md  package-lock.json  package.json  settings.gradle.kts  tsconfig.json
app/: CMakeLists.txt  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/myapplication/: MainActivity.kt
app/src/main/java/com/example/myapplication/gl/: EdgeRenderer.kt
app/src/main/res/layout/: activity_main.xml  edge_view.xml
gradle/wrapper/: gradle-wrapper.properties
web/: index.html
web/src/: main.ts
